src/modules/base/primitiveTreeItem/primitiveTreeItem.css
:host {
    outline: none;
}

:host[aria-disabled='true'] .avonni-primitive-tree-item__header,
:host[aria-disabled='true'] .avonni-primitive-tree-item__metatext {
    cursor: default;
}

:host[aria-disabled='true'] .avonni-primitive-tree-item__header {
    color: var(--avonni-tree-item-header-text-color-disabled, #dddbda);
}

:host[aria-disabled='true'] .avonni-primitive-tree-item__metatext {
    color: var(--avonni-tree-item-metatext-text-color-disabled, #dddbda);
}

:host[aria-disabled='true'] .avonni-primitive-tree-item__item.slds-is-hovered,
:host[aria-disabled='true'] .avonni-primitive-tree-item__item:hover {
    cursor: default;
    background-color: transparent;
}

:host[aria-selected='true']
    > .avonni-primitive-tree-item__single-selection
    > .avonni-primitive-tree-item__item {
    background: var(
        --avonni-tree-item-color-background-selected,
        var(--lwc-brandPrimaryTransparent, rgba(21, 137, 238, 0.1))
    );
    -webkit-box-shadow: var(
        --avonni-tree-item-shadow-selected,
        var(--lwc-brandPrimary, #1b96ff) 4px 0 0 inset
    );
    box-shadow: var(
        --avonni-tree-item-shadow-selected,
        var(--lwc-brandPrimary, #1b96ff) 4px 0 0 inset
    );
}

.avonni-primitive-tree-item__header .avonni-primitive-tree-item__label {
    min-width: 0;
}

.avonni-primitive-tree-item__header .avonni-primitive-item__link {
    color: var(
        --avonni-tree-item-header-link-text-color,
        var(--lwc-brandAccessible, #0176d3)
    );
}

.avonni-primitive-tree-item__header a.avonni-primitive-item__link:hover,
.avonni-primitive-tree-item__header a.avonni-primitive-item__link:focus {
    color: var(
        --avonni-tree-item-header-link-text-color-hover,
        var(--lwc-brandAccessibleActive, #014486)
    );
}

.avonni-primitive-tree-item__metatext {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    -webkit-line-clamp: var(--avonni-tree-item-metatext-line-clamp, 2);
}

.avonni-primitive-tree-item__metatext,
.avonni-primitive-tree-item__metatext .avonni-primitive-item__link {
    color: var(--avonni-tree-item-metatext-text-color, #3e3e3c);
}

.avonni-primitive-item__link:hover {
    text-decoration: none;
}

.avonni-primitive-item__link:focus {
    outline: 0;
    text-decoration: underline;
}

.avonni-primitive-tree-item__header {
    color: var(--avonni-tree-item-header-text-color, #080707);
    font-size: var(--avonni-tree-item-header-text-font-size, 0.8125rem);
    font-style: var(--avonni-tree-item-header-text-font-style, normal);
    font-weight: var(--avonni-tree-item-header-text-font-weight, 400);
    background-color: var(--avonni-tree-item-header-color-background);
    padding-top: var(--avonni-tree-item-header-spacing-block-start);
    padding-bottom: var(--avonni-tree-item-header-spacing-block-end);
    padding-left: var(--avonni-tree-item-header-spacing-inline-start);
    padding-right: var(--avonni-tree-item-header-spacing-inline-end);
}

.avonni-primitive-tree-item__header:hover {
    background: var(--avonni-tree-item-header-color-background-hover);
}

.avonni-primitive-tree-item__item {
    padding: 0.25rem 0 0.25rem var(--avonni-tree-item-spacing-inline-left, 1rem);
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    user-select: none;
}

.avonni-primitive-tree-item__item_border-bottom::after,
.avonni-primitive-tree-item__item_border-top::before {
    content: '';
    display: block;
    height: 2px;
    background-color: #747474;
    position: absolute;
    left: var(
        --avonni-tree-item-spacing-inline-start-border,
        var(--avonni-tree-item-spacing-inline-left, 0)
    );
    right: 0;
}

.avonni-primitive-tree-item__item_border-bottom_invalid::after,
.avonni-primitive-tree-item__item_border-top_invalid::before {
    content: '';
    display: block;
    height: 2px;
    background-color: var(--slds-g-color-border-error-1, #ba0517);
    position: absolute;
    left: var(
        --avonni-tree-item-spacing-inline-start-border,
        var(--avonni-tree-item-spacing-inline-left, 0)
    );
    right: 0;
}

.avonni-primitive-tree-item__item_border-bottom::after,
.avonni-primitive-tree-item__item_border-bottom_invalid::after {
    bottom: 0;
}

.avonni-primitive-tree-item__item_border-top::before,
.avonni-primitive-tree-item__item_border-top_invalid::before {
    top: 0;
}

.avonni-primitive-tree-item__item.slds-is-hovered,
.avonni-primitive-tree-item__item:hover {
    background: var(--avonni-tree-item-color-background-hover, #f3f2f2);
}

.avonni-primitive-tree-item__item_selectable.slds-is-hovered,
.avonni-primitive-tree-item__item_selectable:hover {
    cursor: pointer;
}

.avonni-primitive-tree-item__item_border {
    -webkit-box-shadow: #c9c9c9 0 0 0 1px inset;
    box-shadow: inset 0 0 0 1px #c9c9c9;
}

.avonni-primitive-tree-item__item_border_invalid {
    -webkit-box-shadow: var(--slds-g-color-border-error-1, #ba0517) 0 0 0 1px
        inset;
    box-shadow: inset 0 0 0 1px var(--slds-g-color-border-error-1, #ba0517);
}

.avonni-primitive-tree-item__actions {
    opacity: 0;
    transition: 0.17s;
    margin-left: var(--avonni-tree-item-actions-spacing-inline-left);
}

.avonni-primitive-tree-item__popover {
    left: 0;
    width: 100%;
}

.avonni-primitive-tree-item__chevron {
    transition: transform 300ms;
    -ms-flex-item-align: start;
    align-self: flex-start;
}

.avonni-primitive-tree-item__chevron_expanded {
    transform: rotate(90deg);
}

.avonni-primitive-tree-item__edit-label-button {
    --sds-c-icon-color-foreground: #969492;
}

.avonni-primitive-tree-item__loading-spinner {
    height: 3rem;
    z-index: 0;
}
.avonni-primitive-tree-item__load-more-button {
    padding: 0.25rem 0 0.25rem
        calc(var(--avonni-tree-item-spacing-inline-left, 1rem) + 2.375rem);
}

